{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 521,
  "lineage": "437dcf43-5da9-c762-044c-0781ba8ffc2a",
  "resources": [
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:internet-gateway/igw-0d44fb16fa18f730f",
            "id": "igw-0d44fb16fa18f730f",
            "owner_id": "174462142093",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:174462142093:loadbalancer/app/test-ecs-lb/72e3cf76977a92f6",
            "arn_suffix": "app/test-ecs-lb/72e3cf76977a92f6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-ecs-lb-615652943.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:174462142093:loadbalancer/app/test-ecs-lb/72e3cf76977a92f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06373174183955e61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ab71711dc8da077"
              },
              {
                "subnet_id": "subnet-0da01b2015fa4b46b"
              }
            ],
            "subnets": [
              "subnet-00ab71711dc8da077",
              "subnet-0da01b2015fa4b46b"
            ],
            "vpc_id": "vpc-09b5d4ef368ba8483",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc-dev.aws_security_group.lb",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:174462142093:listener/app/test-ecs-lb/72e3cf76977a92f6/2cf1ce85da9b83c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:174462142093:targetgroup/lb-target-group/e73b271a53b30b28",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:174462142093:listener/app/test-ecs-lb/72e3cf76977a92f6/2cf1ce85da9b83c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:174462142093:loadbalancer/app/test-ecs-lb/72e3cf76977a92f6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_lb.test-lb",
            "module.vpc-dev.aws_lb_target_group.lb_target_group",
            "module.vpc-dev.aws_security_group.lb",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:174462142093:targetgroup/lb-target-group/e73b271a53b30b28",
            "arn_suffix": "targetgroup/lb-target-group/e73b271a53b30b28",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:174462142093:targetgroup/lb-target-group/e73b271a53b30b28",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:route-table/rtb-02522914f04e2a131",
            "id": "rtb-02522914f04e2a131",
            "owner_id": "174462142093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d44fb16fa18f730f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed5f9e8279e5181",
            "route_table_id": "rtb-02522914f04e2a131",
            "subnet_id": "subnet-00ab71711dc8da077"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00073c7dbd50f4e73",
            "route_table_id": "rtb-02522914f04e2a131",
            "subnet_id": "subnet-0da01b2015fa4b46b"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:security-group/sg-0d11e0f48e77cecad",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d11e0f48e77cecad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "174462142093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sec-Group"
            },
            "tags_all": {
              "Name": "Sec-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:security-group/sg-06373174183955e61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06373174183955e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": "",
            "owner_id": "174462142093",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "teslaluv",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "teslaluv",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:subnet/subnet-00ab71711dc8da077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ab71711dc8da077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174462142093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:subnet/subnet-0da01b2015fa4b46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da01b2015fa4b46b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174462142093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-09b5d4ef368ba8483"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174462142093:vpc/vpc-09b5d4ef368ba8483",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05588c1c50e9d887e",
            "default_route_table_id": "rtb-0813e877dc312b165",
            "default_security_group_id": "sg-02232a74b1903fbe7",
            "dhcp_options_id": "dopt-0c713c468a8f88c73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09b5d4ef368ba8483",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0813e877dc312b165",
            "owner_id": "174462142093",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}